# caleb

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Lucky.aux  Makefile  README.md  README.rst  Study_log.aux  add_to_bibfile.py  caleb  g  latex_web_thing  latex_web_thing.py  parsing.py  pyproject.toml  requirements.txt  run_test  setup.py  test.aux  test.bib  test.tex
caleb/: amsmrlookup.py  app.py  cmdline.py  file_handler.py  reference.py
example/: .latexmkrc  example.tex
examples/: an_example.tex  example.tex
test/: test.tex
tests/: conftest.py  consts.py  test_cmdline.py  test_file_handler.py  test_general.py  test_reference.py
tests/tex_files/: bad.aux  biblio.bib  biblio_dirty.bib  test.aux  test.tex  test_clean.aux  test_clean.tex  test_dirty.aux  test_dirty.tex
tests/tex_files/control_bibs/: not_take_all.bib  take_all.bib  test_control.bib
tests/tex_files/tex_fixtures/: biblio_dirty.bib
tests/tex_files/tex_originals/: biblio_clean_before.bib
