[tool.poetry]
name = "caleb"
version = "0.3.0"
description = "A tool to automatically retrieve bibtex entries"
authors = ["kevin lui <kevinywlui@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
crossref-commons = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
