[tool.poetry]
name = "caleb"
version = "0.4.0"
description = "A tool to automatically retrieve bibtex entries"
authors = ["kevin lui <kevinywlui@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
crossref-commons = "^0.0.5"

[tool.poetry.dev-dependencies]
python-coveralls = "^2.9"
pytest-cov = "^2.7"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
