[tool.poetry]
name = "caleb"
version = "0.4.3"
description = "A tool to automatically retrieve bibtex entries"
authors = ["kevin lui <kevinywlui@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kevinywlui/caleb"
keywords = ["latex", "python", "crossref"]
classifiers = [
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
    

[tool.poetry.dependencies]
python = "^3.7"
crossref-commons = "^0.0.5"

[tool.poetry.dev-dependencies]
python-coveralls = "^2.9"
pytest-cov = "^2.7"
flake8 = "^3.7"
pytest = "^5.0"

[tool.poetry.scripts]
caleb = 'caleb.bin.caleb:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
